cabal-version:      2.4
name:               advent-of-code2021
version:            0.1.0.0

common shared
    build-depends:
        base ^>=4.14.3.0
      , megaparsec
    default-language: Haskell2010

executable day1
    import: shared
    hs-source-dirs:   app/day1
    main-is:          Main.hs

executable day2
    import: shared
    hs-source-dirs:   app/day2
    main-is:          Main.hs

executable day3
    import: shared
    hs-source-dirs:   app/day3
    main-is:          Main.hs